[package]
name = "starlark_lsp"
edition = "2018"
version = "0.4.0-pre"
license = "Apache-2.0"
description = "An implementation of the Starlark language in Rust."
documentation = "https://docs.rs/starlark"
repository = "https://github.com/facebookexperimental/starlark-rust"
authors = [
    "Damien Martin-Guillerez <dmarting@google.com>",
    "Stepan Koltsov <stepan.koltsov@gmail.com>",
    "Facebook"
]
keywords = ["starlark", "skylark", "bazel", "language", "interpreter"]
categories = ["parser-implementations", "development-tools"]

[dependencies]
starlark = { path = "../starlark" }
anyhow = "1.0.26"
itertools = "0.9"
# @oss-disable: gazebo = { path = "../../gazebo/gazebo", features =  ["str_pattern_extensions"] }
gazebo = { git = "https://github.com/facebookincubator/gazebo", features =  ["str_pattern_extensions"] } # @oss-enable
# @oss-disable: linter = { path = "../../linter/linter" }
structopt = "0.3.0"
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustyline = "6.3.0"
tower-lsp = "0.13.3"
tokio = {version = "0.2", features = ["io-std"]}

[[bin]]
name = "starlark"
path = "bin/main.rs"
